# handler

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  __init__.py  __main__.py  agent.py  cli.py  context.py  environment.py  event_store.py  memory.py  paths.py  pyproject.toml  requirements.txt  types.py  utils.py
actions/: CLAUDE.md  __init__.py  builtin.py  coding.py  selfmod.py  session.py  watchdog.py
agent/: CLAUDE.md  README.md  agent_config.py  agent_logger.py  agent_loop.py  agent_session.py  agent_state.py  handler.md  workspace.py
agent/providers/: __init__.py  dummy_provider.py  model_provider.py  openai_provider.py
agent/tools/: __init__.py  base_tool.py  tool_registry.py
channels/: CLAUDE.md  __init__.py  admin.py  gmail.py  gmail_channel_design.md  scheduler.py  telegram.py  web.py
channels/static/: app.js  index.html  style.css
docs/: deployment-setup.md  ui-design-guide.md
src/handler/: __init__.py  __main__.py  cli.py  environment.py  event_store.py  google_oauth.py  instance.py  paths.py  task_runner.py  types.py  users.py
src/handler.egg-info/: SOURCES.txt
src/handler/agent/: __init__.py  base.py  claude.py  loop.py  openai.py  openai_manual.py  tools.py
src/handler/channels/: CLAUDE.md  __init__.py  admin.py  scheduler.py  telegram.py  web.py
src/handler/context/: CLAUDE.md  __init__.py  context.py
src/handler/kb/: database.py  indexer.py  models.py  pipeline.py  preprocessing.py
src/handler/memory/: CLAUDE.md  __init__.py  memory.py
watchdog/: CLAUDE.md  __init__.py  backends.py  core.py
(+24 files in other folders)
